[package]
name = "httpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.22.4"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
httparse = "1.8.0"
percent-encoding = "2.3.1"
form_urlencoded = "1.2.1"
url = "2.5.0"
hyper = { version = "0.14", features = ["full"] }
lib-lua = {package = "lib-lua-sys", path = "../../libs/lib-lua-sys",features = ["lua54"]}
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
dashmap = "5.5.3"
chrono = { version = "0.4.19", features = ["serde"] }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
name = "httpc"