[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
lib-lua = {package = "lib-lua-sys", path = "../../libs/lib-lua-sys",features = ["lua54"]}
lib-common = {package= "lib-common-sys", path = "../../libs/lib-common-sys", version = "0.1.0"}
tokio = { version = "1", features = ["full"] }
dashmap = "6.1.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["rustls-tls","trust-dns"],default-features = false}