[package]
name = "lib-lualib"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["cdylib"]
doctest = false

[dependencies]
lib-core = { path = "../../libs/lib-core"}
lib-lua = {package = "lib-lua-sys", path = "../../libs/lib-lua-sys",features = ["lua54"]}
tokio = { version = "1", features = ["full"] }
log = "0.4.0"
calamine = "^0.26"
csv = "1.3.0"

bytes = "1.5.0"
base64 = "^0.22"

reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false}
serde = { version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
percent-encoding = "2.3.1"
form_urlencoded = "1.2.1"
url = "2.5.0"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }

dashmap = "6.1.0"
lazy_static = "1.5.0"

# opendal = { version = "0.50.1", features = [
#   # These are default features before v0.46. TODO: change to optional features
#   "services-azblob",
#   "services-azdls",
#   "services-cos",
#   "services-fs",
#   "services-gcs",
#   "services-ghac",
#   "services-http",
#   "services-ipmfs",
#   "services-memory",
#   "services-obs",
#   "services-oss",
#   "services-s3",
#   "services-webdav",
#   "services-webhdfs",
#   "services-azfile",
#   "services-mysql"
# ] }